<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/styleQuestion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.ihrprof.quizapp.Q1Activity" >

    <TextView
        android:id="@+id/q1question"
        style="@style/styleQTitel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q1_text"
        android:textAppearance="@style/styleQTitel" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/q1question"
        android:layout_below="@+id/q1question"
        android:layout_marginTop="25dp"
        android:paddingLeft="20dp" >

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/q1_answer1" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1_answer2" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/q1_answer3" />

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1_answer4" />

        <RadioButton
            android:id="@+id/radio5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1_answer5" />
    </RadioGroup>

    <Button
        android:id="@+id/button_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radioGroup1"
        android:layout_alignRight="@+id/q1question"
        android:onClick="btn_clicked"
        android:text="@string/q1_continue" />

</RelativeLayout>